--- a/CS1024VG/.project
+++ b/CS1024VG/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/UI/healthbar.png</name>
+			<type>1</type>
+			<location>C:/Users/thien/Downloads/healthbar.png</location>
+		</link>
+	</linkedResources>
 </projectDescription>
