--- a/CS1024VG/.project
+++ b/CS1024VG/.project
@@ -20,5 +20,10 @@
 			<type>1</type>
 			<location>C:/Users/thien/Downloads/healthbar.png</location>
 		</link>
+		<link>
+			<name>src/UI/playerhealthbar.png</name>
+			<type>1</type>
+			<location>C:/Users/thien/Downloads/playerhealthbar.png</location>
+		</link>
 	</linkedResources>
 </projectDescription>
